<resources>
    <string name="app_name">Music Mate</string>
    <string name="app_settings">Settings</string>
    <string name="app_about">About Music Mate</string>
    <string name="editor_song_info">Song Information</string>
    <string name="editor_album_info">Album Information</string>
    <string name="editor_label_title">Title</string>
    <string name="editor_label_artist">Artist</string>
    <string name="editor_label_genre">Genre</string>
    <string name="editor_label_group">Grouping</string>
    <string name="editor_label_album">Album</string>
    <string name="editor_label_album_artist">Album artist</string>
    <string name="editor_label_disc">Disc number</string>
    <string name="editor_label_track">Song number</string>
    <string name="editor_label_year">Year</string>
    <string name="editor_label_media_type">Media type</string>
    <string name="editor_label_media_quality">Media quality</string>
    <string name="editor_label_publisher">Publisher</string>
    <string name="editor_hint_track">Track No.</string>
    <string name="editor_hint_disc">Disc No.</string>
    <string name="alert_template_success">"%1$s is completed successfully."</string>
    <string name="alert_template_inprogress">"%1$s in progress…"</string>
    <string name="alert_template_fail">"%1$s failed."</string>
    <string name="operation_delete">Deleting \"%1$s\"</string>
    <string name="operation_write_tag">Saving tags on \"%1$s\"</string>
    <string name="operation_organize">Importing \"%1$s\"</string>
    <string name="alert_delete_success">\"%1$s\" is removed from storage.</string>
    <string name="alert_delete_inprogress">Deleting \"%1$s\"</string>
    <string name="alert_delete_fail">Cannot delete \"%1$s\"</string>
    <string name="alert_delete_inprogress_many">Deleting %1$d songs</string>
    <string name="alert_write_tag_inprogress">Saving tags on \"%1$s\"</string>
    <string name="alert_write_tag_success">\"%1$s\" is saved</string>
    <string name="alert_write_tag_fail">Cannot update \"%1$s\"</string>
    <string name="alert_write_tag_inprogress_many">Saving tags for %1$d songs.</string>
    <string name="alert_organize_success">\"%1$s\" is imported to Music Directory</string>
    <string name="alert_organize_inprogress">Import \"%1$s\" to Music Directory;</string>
    <string name="alert_organize_fail">Cannot import \"%1$s\"</string>
    <string name="alert_organize_inprogress_many">Importing %1$d songs to Music Directory</string>
    <string name="alert_scan_title">Start running media scan…</string>
    <string name="alert_scan_success">Media scan run completed</string>
    <string name="alert_back_to_exit">Press BACK again to exit</string>
    <string name="alert_invalid_media_file">Media file for \"%1$s\" is not valid!</string>
    <string name="alert_btn_cancel">Cancel</string>
    <string name="alert_btn_set">Update</string>
    <string name="title_many">%1$d songs</string>
    <string name="preferences_sub_next_song">Now Playing Song</string>
    <string name="preferences_sub_appearance">Appearance</string>
    <string name="preferences_sub_storage">Storage</string>
    <string name="MetaDataEncoding">Metadata Encoding</string>
    <string name="MetaDataEncodingSummary">Choose the encoding to include in options list on encoding menu</string>
    <string name="symbol_audiophile">\u24B6</string>
    <string name="action_delete">Delete songs</string>
    <string name="action_select_all">Select All</string>
    <string name="welcome_text">Manage Your Music Files Your Way and Enjoy Listening!</string>
    <string name="changelog_text">2.0.1 - update to androidx</string>
    <string name="app_permission">Storage Access</string>
    <string name="preferences_sub_others">Others</string>
    <string name="search_view_query_input_hint">Search</string>
    <string name="import_songs_underline"><u>Import</u></string>
    <string name="edit_tags_underline"><u>Edit Tags</u></string>
    <string name="delete_song_underline"><u>Delete</u></string>
    <string name="aspect_underline"><u>Spectrogram</u></string>
    <string name="websearch_underline"><u>Web Search</u></string>
    <string name="convert_underline"><u>2 Flac</u></string>
    <string name="import_songs_label">Import</string>
    <string name="measure_dr_label">DR</string>
    <string name="edit_tags_label">TAG</string>
    <string name="delete_song_label">Delete</string>
    <string name="aspect_label">View Spectrum</string>
    <string name="websearch_label">Web Search</string>
    <string name="convert_label">Convert</string>
    <string name="editor_label_collection">Collection</string>
    <string name="preferences_sub_collection">Collections</string>
    <string name="file_explorer_label">Folder</string>
    <string name="app_statistics">Statistics</string>
    <string name="encoding_format">Encoding Format:</string>
    <string name="editor_label_language">Language</string>
    <string name="editor_info">Music information</string>
    <string name="enter_title">Enter title</string>
    <string name="file_path">File Path</string>
    <string name="editor_musicmate_info">Music Mate information</string>
    <string name="sync_to_hiby_label">Sync</string>
    <string name="sample_dr">DR14</string>
    <string name="preferences_sub_streaming">Streaming</string>
    <string name="title_removing_music_files">Move songs to the Trash?</string>
    <string name="this_device">this device</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="addToQueue">Add to Queue</string>
    <string name="exit">Exit</string>
    <string name="playerCurrentItem">currentItem</string>
    <string name="musicActivityNextLabel">"Next: "</string>
    <string name="playerNextItem">nextItem</string>
    <string name="playerPosition">Position</string>
    <string name="playerTiming">Timing: </string>
    <string name="playerTimeDuration">Duration</string>
    <string name="playerTimeSeparator"> / </string>
    <string name="playerTimeElapsed">Elapsed</string>
    <string name="images">Images</string>
    <string name="albums">Albums</string>
    <string name="all">All Songs</string>
    <string name="artists">Artists</string>
    <string name="label_genres">Genres</string>
    <string name="label_groupings">Groupings</string>
    <string name="downloaded">Downloads</string>
    <string name="directory">Sources</string>
    <string name="music">Music</string>
    <string name="playerNameAvTransport">remote</string>
    <string name="playerNameMusic">music</string>
    <string name="playerShortNameMusic">Music</string>
    <string name="activity_remote_player_mute">Mute</string>
    <string name="activity_remote_player_volume">Volume</string>
    <string name="title_activity_server_list">Server</string>
    <string name="title_activity_content_list">Content</string>
    <string name="title_activity_receiver_list">Receiver</string>
    <string name="title_activity_player_list">Player</string>
    <string name="musicActivityImageView">Cover</string>
    <string name="menu_settings">MusicMate Settings</string>
    <string name="about">About</string>
    <string name="channel_name">MusicMate</string>
    <string name="channel_description">MusicMate Notifications</string>
    <string name="media_server_name">MusicMate Music Server</string>
    <string name="style">Style</string>
    <string name="sample_file_type">FLAC</string>
    <string name="file_status_new">New!</string>
    <string name="title_dynamic_range_and_replay_gain">Analyze Dynamic Range?</string>
    <string name="title_import_to_music_directory">Move to Music Directory?</string>
    <string name="title_sync_to_streaming_server">Sync to Streaming Server</string>
    <string name="label_encodings">Encodings</string>
    <string name="label_quality_indicator">Quality</string>
    <string name="label_server">Media Server</string>
    <string name="label_collections">Playlists</string>
    <string name="label_dlna_collections">Playlists</string>
    <string name="label_field">Field</string>
    <string name="label_current">Current</string>
    <string name="label_default_reader">Default Reader</string>
    <string name="label_ffmpeg_reader">FFMpeg Reader</string>
    <string name="about_encoding_file">Encode Audio: Recommended FLAC (Lossless)</string>
    <string name="label_resolutions">Resolutions</string>
    <string name="label_lossy">LC</string>
    <string name="label_Lossless">SQ</string>
    <string name="label_hi_res">HR</string>
    <string name="label_dsd">DSD</string>
    <string name="label_mqa">MQA</string>
    <string name="label_audio_encoding_format">Resolutions</string>
    <string name="label_file_format">File Format:</string>
    <string name="label_file_resolution">Resolution:</string>
    <string name="label_file_recommended">Recommended Genre:</string>
    <string name="encoding_hq_header">Lossy Codecs</string>
    <string name="encoding_hq_desc">Optimal Balance of Data Usage and Sound Fidelity.</string>
    <string name="encoding_hq_format">MP3, AAC(M4A)</string>
    <string name="encoding_hq_resolution">16bit/44.1kHz, bitrate 256kbps or higher</string>
    <string name="encoding_hq_recommended">-</string>
    <string name="encoding_lossless_header">Standard Quality</string>
    <string name="encoding_lossless_desc">Reproduce Music with Smooth CD Quality.</string>
    <string name="encoding_lossless_format">FLAC, ALAC, WAVE, AIFF</string>
    <string name="encoding_lossless_resolution">16bit/44.1kHz, 24bit/48kHz</string>
    <string name="encoding_lossless_recommended">Pop, Rock</string>
    <string name="encoding_hires_header">High Resolution Lossless</string>
    <string name="encoding_hires_desc">Enjoy Rich Music with Fine Instrument Details.</string>
    <string name="encoding_hires_format">FLAC, ALAC, WAVE, AIFF</string>
    <string name="encoding_hires_resolution">24bit/96kHz or Higher</string>
    <string name="encoding_hires_recommended">Classic, Jazz, Vocal, Soundtrack, Ballad</string>
    <string name="encoding_dsd_header">DSD Audio</string>
    <string name="encoding_dsd_desc">Enjoy Detailed, Wide-Range Music with a Warm Tone.</string>
    <string name="encoding_dsd_format">DSF, DFF</string>
    <string name="encoding_dsd_resolution">DSD 64, DSD 128, DSD 256 or Higher</string>
    <string name="encoding_dsd_recommended">Classic, Jazz, Vocal</string>
    <string name="encoding_mqa_header">MQA Studio Masters</string>
    <string name="encoding_mqa_desc">High-Quality Recordings with Studio Sound and Archival Classics.</string>
    <string name="encoding_mqa_format">FLAC</string>
    <string name="encoding_mqa_resolution">DSD 64, DSD 128, DSD 256 or Higher</string>
    <string name="encoding_mqa_recommended">-</string>
    <string name="encoding_mqa_green_header">MQA (Green):</string>
    <string name="encoding_mqa_green_detail">Genuine, but Not the Final Release</string>
    <string name="encoding_mqa_blue_header">MQA Studio (Blue):</string>
    <string name="encoding_mqa_blue_detail">Directly from Mastering Engineers</string>
    <string name="label_audio_quality">Sound Quality</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="close">Close</string>
    <string name="label_audio_resolutions">Audio Resolution</string>
    <string name="groupings_header_content">This delightful journey through the world\'s musical landscape offers something for every passionate listener</string>
    <string name="storage_internal">Internal</string>
    <string name="storage_secondary">Secondary</string>
    <string name="label_version">Version</string>
</resources>