<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">
<!--
    <ImageView
        android:layout_width="@dimen/dimen_64_dp"
        android:layout_height="@dimen/dimen_64_dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"
        android:contentDescription="@string/editor_musicmate_info"/>
        -->
    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="14sp"
        android:text="@string/label_version"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_4_dp"
        android:layout_gravity="center"
        android:textStyle="italic|bold"
        android:textSize="12sp"
        android:text="@string/welcome_text"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="@dimen/dimen_12_dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_1_dp"
    android:layout_marginBottom="@dimen/dimen_4_dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_12_dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:layout_marginRight="@dimen/dimen_8_dp"
            android:background="@drawable/shape_border_grey">
            <LinearLayout
                android:id="@+id/storage_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/dimen_4_dp"
                android:orientation="vertical"
                android:padding="1dp">
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen_4_dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="@dimen/dimen_24_dp"
                    android:layout_height="@dimen/dimen_24_dp"
                    android:paddingLeft="@dimen/dimen_8_dp"
                    android:src="@drawable/ic_round_memory_16"
                    android:contentDescription="@string/editor_musicmate_info"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4_dp"
                    android:layout_gravity="center"
                    android:textSize="10sp"
                    android:text="@string/storage_internal"/>
                <ImageView
                    android:layout_width="@dimen/dimen_24_dp"
                    android:layout_height="@dimen/dimen_24_dp"
                    android:paddingLeft="@dimen/dimen_8_dp"
                    android:src="@drawable/ic_round_sd_card_16"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/dimen_4_dp"
                    android:layout_gravity="center"
                    android:textSize="10sp"
                    android:text="@string/storage_secondary"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_4_dp"
            android:layout_marginTop="@dimen/dimen_12_dp"
            android:layout_margin="@dimen/dimen_4_dp"
            android:background="@drawable/shape_border_message_box">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/label_audio_resolutions"
                android:padding="@dimen/dimen_4_dp"
                android:layout_margin="@dimen/dimen_4_dp"
                android:textColor="@color/black"
                />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chartResolutions"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_16_dp"
                android:layout_marginLeft="@dimen/dimen_8_dp"
                android:layout_marginRight="@dimen/dimen_8_dp"
                android:background="@drawable/shape_border_grey"
                android:layout_height="180dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dimen_4_dp"
            android:layout_marginRight="@dimen/dimen_4_dp">
            <TextView
                android:id="@+id/encoding_btn_hq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_lossy"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_8_dp"
                android:paddingEnd="@dimen/dimen_8_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:background="@drawable/shape_background_lossy"
                tools:ignore="RtlSymmetry"
                />
            <TextView
                android:id="@+id/encoding_btn_lossless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_Lossless"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_8_dp"
                android:paddingEnd="@dimen/dimen_8_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:background="@drawable/shape_background_lossless"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/encoding_btn_hires"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_hi_res"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_8_dp"
                android:paddingEnd="@dimen/dimen_8_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:background="@drawable/shape_background_hires"
                tools:ignore="RtlSymmetry"
                />
            <TextView
                android:id="@+id/encoding_btn_dsd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dsd"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_8_dp"
                android:paddingEnd="@dimen/dimen_8_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:background="@drawable/shape_background_dsd"
                tools:ignore="RtlSymmetry"
                />
            <TextView
                android:id="@+id/encoding_btn_mqa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_mqa"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:paddingStart="@dimen/dimen_8_dp"
                android:paddingEnd="@dimen/dimen_8_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:background="@drawable/shape_background_mqa"
                tools:ignore="RtlSymmetry"
                />
        </LinearLayout>
            <TextView
                android:id="@+id/encoding_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:padding="@dimen/dimen_4_dp"
                android:layout_marginTop="@dimen/dimen_16_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/encoding_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_8_dp"
                android:paddingEnd="@dimen/dimen_8_dp"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:layout_marginBottom="@dimen/dimen_8_dp"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_4_dp"
        android:layout_marginTop="@dimen/dimen_12_dp"
        android:layout_margin="@dimen/dimen_4_dp"
        android:background="@drawable/shape_border_message_box">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/label_groupings"
            android:padding="@dimen/dimen_4_dp"
            android:layout_margin="@dimen/dimen_4_dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/groupings_header_content"/>

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chartGroupings"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:layout_marginRight="@dimen/dimen_8_dp"
            android:background="@drawable/shape_border_grey"
            android:layout_height="180dp"/>

        <LinearLayout
            android:id="@+id/groupingBtnPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dimen_4_dp"
            android:layout_marginRight="@dimen/dimen_4_dp">
        </LinearLayout>
        <TextView
            android:id="@+id/groupings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:padding="@dimen/dimen_4_dp"
            android:layout_marginTop="@dimen/dimen_16_dp"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:textColor="@color/black"
            />
        <TextView
            android:id="@+id/groupings_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen_8_dp"
            android:paddingEnd="@dimen/dimen_8_dp"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:layout_marginBottom="@dimen/dimen_8_dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_4_dp"
            android:layout_marginTop="@dimen/dimen_12_dp"
            android:layout_margin="@dimen/dimen_4_dp"
            android:background="@drawable/shape_border_message_box">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/label_audio_quality"
                android:padding="@dimen/dimen_4_dp"
                android:layout_margin="@dimen/dimen_4_dp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/quality_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_8_dp"
                android:paddingEnd="@dimen/dimen_8_dp"
                android:textColor="@color/grey600"
                android:layout_marginStart="@dimen/dimen_8_dp"
                android:layout_marginBottom="@dimen/dimen_8_dp"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>